<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_weight="0.5"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/what_is_an_issuing_bank" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:layout_weight="0.15"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/banking_system"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Button
            android:id="@+id/Users_Button"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:layout_weight="0.15"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/view_all_users" />

        <Button
            android:id="@+id/Transaction_Button"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="0.15"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/view_all_transactions" />
    </LinearLayout>
</ScrollView>

