<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_details"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview_details"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/name_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardview_details"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/name_tag"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/account_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_tag"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/account_number"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/account_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_details"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/account_tag"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/phone_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_tag"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/phone_no"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/phone_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_details"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/phone_tag"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/email_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_tag"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/email_id"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/email_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_details"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/email_tag"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/balance_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_tag"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/balance"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/Balance_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_details"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/balance_tag"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/transfer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Balance_details"
            android:layout_centerInParent="true"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Transfer Money" />

    </RelativeLayout>
</ScrollView>